# python-package-template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  Dockerfile.gpu  LICENSE  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.devcontainer/: devcontainer.json
.devcontainer/default/: devcontainer.json
.devcontainer/gpu/: devcontainer.json
.devcontainers/: devcontainer-gpu.json
.github/: FUNDING.yml
.github/workflows/: ci-cd.yaml  publish-docker.yaml
docs/: index.md  license.md
license/: index.html
search/: search_index.json
src/REPLACE_PACKAGE_NAME/: __init__.py
src/package/: __init__.py
tests/: test_hello_world.py
