[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "package"
version = "0.0.1"
packages = [
    { include = "package", from = "src" },
]
description = "Python package description."
authors = [
    "Name Surname <email>"
]
readme = "README.md"
homepage = "https://github.com/username/package"
documentation = "https://github.com/username/package"
repository = "https://package.readthedocs.io/"
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
pre-commit = "^2.20.0"
pytest = "^7.1.2"

[tool.isort]
profile = "black"
