[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "REPLACE_PACKAGE_NAME"
version = "0.0.1"
packages = [
    { include = "REPLACE_PACKAGE_NAME", from = "src" },
]
description = "REPLACE_PACKAGE_DESCRIPTION"
authors = [
    "REPLACE_NAME REPLACE_SURNAME <REPLACE_EMAIL>"
]
readme = "README.md"
homepage = "https://github.com/REPLACE_GITHUB_USERNAME/REPLACE_PACKAGE_NAME"
documentation = "https://github.com/REPLACE_GITHUB_USERNAME/REPLACE_PACKAGE_NAME"
repository = "https://REPLACE_GITHUB_USERNAME.github.io/REPLACE_PACKAGE_NAME"
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
pre-commit = "^2.20.0"
pytest = "^7.1.2"

[tool.isort]
profile = "black"
